--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,6 +64,10 @@ packages = ["apias"]
 
 [tool.setuptools_scm]
 write_to = "apias/_version.py"
+version_scheme = "release-branch-semver"
+local_scheme = "no-local-version"
+fallback_version = "0.1.1"
+tag_regex = "^v(?P<version>[0-9]+\\.[0-9]+\\.[0-9]+)$"
 
 [tool.black]
 line-length = 88
