--- a/pyproject.toml
+++ b/pyproject.toml
@@ -137,7 +137,15 @@ select = [
     "B",  # flake8-bugbear
     "UP", # pyupgrade
 ]
-ignore = []
+ignore = [
+    "E203",  # Whitespace before ':'
+    "E402",  # Module level import not at top of file
+    "E501",  # Line too long
+    "E266",  # Too many leading '#' for block comment
+    "W505",  # Doc line too long
+    "F841",  # Local variable is assigned to but never used
+    "F842"   # Local variable is assigned to but never referenced
+]
 
 [tool.ruff.per-file-ignores]
 "__init__.py" = ["F401"]
