--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -26,17 +26,18 @@ jobs:
         python -m pip install --upgrade pip
         pip install -e ".[dev,test]"
         
-    - name: Lint with ruff
+    - name: Lint and fix with ruff
       run: |
-        ruff check .
+        git config --global user.name "GitHub Actions Bot"
+        git config --global user.email "actions@github.com"
+        ruff check --fix .
+        git add .
+        git diff --staged --quiet || git commit -m "style: apply automatic fixes"
+        git push
         
     - name: Check formatting with black
       run: |
         black --check .
-        
-    - name: Check imports with isort
-      run: |
-        isort --check-only .
         
     - name: Type check with mypy
       run: |
