--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -38,7 +38,11 @@ jobs:
         git config --global user.email "actions@github.com"
         ruff check --fix --unsafe-fixes .
         git add .
-        git diff --staged --quiet || (git commit -m "style: apply automatic fixes" && git push https://$GITHUB_TOKEN@github.com/${{ github.repository }}.git HEAD:${{ github.ref }})
+        if ! git diff --staged --quiet; then
+          git pull --rebase origin main
+          git commit -m "style: apply automatic fixes"
+          git push https://$GITHUB_TOKEN@github.com/${{ github.repository }}.git HEAD:${{ github.ref }}
+        fi
         
     - name: Check formatting with black
       run: |
