feat: Optimize GPT-5 Nano chunking and add singleton protection
Major optimizations based on ultrathink analysis:

1. Reduced chunk size from 200K to 80K chars (~27K tokens worst-case)
   - Accounts for 1:1 token/char ratio in languages like Chinese
   - Ensures chunks stay well within GPT-5 Nano's safe input limits
   - Prevents token limit errors and incomplete extractions

2. Optimized prompt for chunked processing
   - Removed confusing "completeness_check" requirement
   - Simplified to focus on extracting ALL content from THIS chunk
   - Clearer instructions for types, signatures, and escaping
   - Better structured with bullet points and examples

3. Fixed XML merge logic
   - Changed from simple newline join to proper XML wrapping
   - Creates valid structure: <XML>{chunk1}{chunk2}...</XML>
   - Prevents "junk after document element" errors

4. Added singleton process protection
   - Prevents multiple APIAS instances from running simultaneously
   - Checks for "uv run apias" or "/bin/apias" processes at startup
   - Displays clear error with PID and kill instructions
   - Protects against wasted API costs from duplicate calls
   - Fail-fast approach before any processing begins

5. Removed obsolete code
   - Cleaned up completeness_check handling in call_openai_api()
   - Streamlined JSON response parsing

Bug Fixes:
- Fixed double slimdown_html() call that grew HTML from 399K to 499K
- Fixed double HTML escaping with formatter="html" in pre/code tags
- Temperature parameter removed (GPT-5 Nano only supports default)

Files modified:
- apias/apias.py: All optimizations and singleton check

--- a/.gitignore
+++ b/.gitignore
@@ -174,3 +174,25 @@ build/
 
 # Temporary directories created by the script
 temp_*/
+
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# SERENA MCP
+.serena/
+
+# Claude Code
+.claude/
+CLAUDE.md
+
+# IDE - VSCode
+.vscode/
+*.code-workspace
+
+# IDE - PyCharm / IntelliJ
+.idea/
+
+# UV package manager
+uv.lock
