--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,8 +40,6 @@ test = [
     "tox>=4.0",
 ]
 dev = [
-    "black>=23.0",
-    "isort>=5.12",
     "mypy>=1.0",
     "ruff>=0.1",
     "pre-commit>=3.3",
@@ -71,15 +69,7 @@ local_scheme = "no-local-version"
 fallback_version = "0.1.1"
 tag_regex = "^v(?P<version>[0-9]+\\.[0-9]+\\.[0-9]+)$"
 
-[tool.black]
-line-length = 88
-target-version = ["py39", "py310", "py311"]
-include = "\\.pyi?$"
-
-[tool.isort]
-profile = "black"
-multi_line_output = 3
-line_length = 88
+# Black and isort replaced by ruff - see [tool.ruff] and [tool.ruff.format]
 
 [tool.mypy]
 python_version = "3.9"
@@ -93,6 +83,26 @@ warn_redundant_casts = true
 warn_unused_ignores = true
 warn_no_return = true
 warn_unreachable = true
+# Allow mypy to find packages in the virtual environment
+namespace_packages = true
+explicit_package_bases = true
+
+# Per-module options for libraries with inline types but mypy doesn't find them
+[[tool.mypy.overrides]]
+module = ["tenacity", "tenacity.*"]
+ignore_missing_imports = true
+
+[[tool.mypy.overrides]]
+module = ["playwright", "playwright.*"]
+ignore_missing_imports = true
+
+[[tool.mypy.overrides]]
+module = ["bs4", "bs4.*"]
+ignore_missing_imports = true
+
+[[tool.mypy.overrides]]
+module = ["requests", "requests.*"]
+ignore_missing_imports = true
 
 [tool.pytest.ini_options]
 minversion = "6.0"
@@ -164,3 +174,12 @@ ignore = [
 [tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["F401"]
 "tests/**/*" = ["S101"]
+
+[tool.ruff.format]
+# Use black-compatible formatting
+quote-style = "double"
+indent-style = "space"
+skip-magic-trailing-comma = false
+line-ending = "auto"
+docstring-code-format = true
+docstring-code-line-length = "dynamic"
