--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
     "playwright>=1.39.0",
     "types-requests>=2.31.0",
     "types-beautifulsoup4>=4.12.0",
+    "openai[aiohttp]>=2.8.1",
 ]
 
 [project.optional-dependencies]
