--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ test = [
     "pytest>=7.0",
     "pytest-cov>=4.0",
     "pytest-mock>=3.10",
+    "pytest-asyncio>=0.21.0",
     "tox>=4.0",
 ]
 dev = [
