--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
     "types-requests>=2.31.0",
     "types-beautifulsoup4>=4.12.0",
     "openai[aiohttp]>=2.8.1",
+    "rich>=14.2.0",
 ]
 
 [project.optional-dependencies]
