fix: Remove NullWriter that blocked Rich TUI rendering
The previous commit added NullWriter to suppress stdout/stderr during TUI,
but this completely blocked Rich's ability to render to the terminal.
Rich's Live display needs stdout to work, even with screen=True.

Changes:
- Remove NullWriter class entirely
- Remove stdout/stderr redirection from suppress_console_logging()
- Keep only the logging handler removal (which is safe)

The TUI uses screen=True which enables alternate screen buffer mode,
which already keeps Rich output separate from normal terminal output.
We only need to suppress Python logging to StreamHandlers, not stdout itself.

Previous behavior: TUI hangs showing nothing
New behavior: TUI renders properly with waiting screen

--- a/.gitignore
+++ b/.gitignore
@@ -197,3 +197,22 @@ CLAUDE.md
 
 # UV package manager
 uv.lock
+
+# Logs directory (contents ignored, folder tracked)
+logs/
+
+# Development folders (not tracked)
+scripts_dev/
+docs_dev/
+libs_dev/
+examples_dev/
+
+# Scraping output folders
+output_*/
+scraped_*/
+
+# Release notes generated during release
+.release-notes-*.md
+
+# Ruby LSP (VS Code extension)
+.ruby-lsp/
