--- a/pyproject.toml
+++ b/pyproject.toml
@@ -159,6 +159,12 @@ exclude_lines = [
 ]
 fail_under = 80
 
+[tool.isort]
+profile = "black"
+line_length = 88
+skip_gitignore = true
+known_first_party = ["apias"]
+
 [tool.ruff]
 line-length = 88
 target-version = "py39"
@@ -196,6 +202,7 @@ ignore = [
 [tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["F401"]
 "tests/**/*" = ["S101"]
+"apias/event_system.py" = ["B024"]  # ABC used for type hierarchy, not enforcement
 
 [tool.ruff.format]
 # Use black-compatible formatting
