fix: Track uv.lock and add skip-existing to PyPI workflow
- Remove uv.lock from .gitignore (should be committed for reproducible builds)
- Add skip-existing: true to publish-to-pypi.yml to prevent failures when
  package is already published (e.g., manual uv publish before tag push)

TODO completed:
- [x] Remove uv.lock from .gitignore
- [x] Add skip-existing to publish workflow
- [x] Commit uv.lock and fixes

--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -37,3 +37,5 @@ jobs:
       with:
         password: ${{ secrets.PYPI_API_TOKEN }}
         verbose: true
+        # Skip if already published (e.g., manual uv publish before tag push)
+        skip-existing: true
